--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>My profile - Poesy</title>
-        <link rel = "stylesheet" href = "https://github.com/shihchinghung/shihchinghung.github.io/blob/main/static/profile.css">
+        <link rel = "stylesheet" href = "https://github.com/shihchinghung/shihchinghung.github.io/static/profile.css">
         <meta charset = "UTF-8">
     </head>
     <body>
