--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class = "header">
             <div class = "nav">
                 <div class = "logo">
-                    <img src = "static/logo.png" alt = "logo">
+                    <img src = "/static/logo.png" alt = "logo">
                 </div>
                     <ul>
                     <li><font face = "serif"><a href = "#information">Information</a></font></li>
