--- a/college.html
+++ b/college.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>My profile - My Life - College</title>
-        <link rel = "stylesheet" href = "/static/college.css">
+        <link rel = "stylesheet" href = "/static/life.css">
         <meta charset = "UTF-8">
     </head>
     <body>
