--- a/senior.html
+++ b/senior.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>My profile - My Life - Senior High</title>
-        <link rel = "stylesheet" href = "/static/senior.css">
+        <link rel = "stylesheet" href = "/static/life.css">
         <meta charset = "UTF-8">
     </head>
     <body>
@@ -23,30 +23,30 @@
             </ul>
         </div>
         <div class = "content">
-            <img class = "senior1-1" src = "/static/senior1-1.png">
-            <img class = "senior1-2" src = "/static/senior1-2.png">
-            <img class = "senior1-3" src = "/static/senior1-3.png">
-            <img class = "senior1-4" src = "/static/senior1-4.png">
-            <img class = "senior1-5" src = "/static/senior1-5.png">
-            <img class = "senior1-6" src = "/static/senior1-6.png">
-            <img class = "senior1-7" src = "/static/senior1-7.png">
-            <img class = "senior1-8" src = "/static/senior1-8.png">
-            <img class = "senior1-9" src = "/static/senior1-9.png">
-            <img class = "senior1-10" src = "/static/senior1-10.png">
-            <img class = "senior1-11" src = "/static/senior1-11.png">
-            <img class = "senior1-12" src = "/static/senior1-12.png">
-            <img class = "senior1-13" src = "/static/senior1-13.png">
-            <img class = "senior1-14" src = "/static/senior1-14.png">
-            <img class = "senior1-15" src = "/static/senior1-15.png">
-            <img class = "senior1-16" src = "/static/senior1-16.png">
-            <img class = "senior1-17" src = "/static/senior1-17.png">
-            <img class = "senior1-18" src = "/static/senior1-18.png">
-            <img class = "senior1-19" src = "/static/senior1-19.png">
-            <img class = "senior1-20" src = "/static/senior1-20.png">
-            <img class = "senior1-21" src = "/static/senior1-21.png">
-            <img class = "senior1-22" src = "/static/senior1-22.png">
-            <img class = "senior1-23" src = "/static/senior1-23.png">
-            <img class = "senior1-24" src = "/static/senior1-24.png">
+            <img class = "i270-480" src = "/static/senior1.png">
+            <img class = "i480-270" src = "/static/senior2.png">
+            <img class = "i400-300" src = "/static/senior3.png">
+            <img class = "i300-400" src = "/static/senior4.png">
+            <img class = "i300-400" src = "/static/senior5.png">
+            <img class = "i300-400" src = "/static/senior6.png">
+            <img class = "i300-400" src = "/static/senior7.png">
+            <img class = "i300-400" src = "/static/senior8.png">
+            <img class = "i350-350" src = "/static/senior9.png">
+            <img class = "i300-400" src = "/static/senior10.png">
+            <img class = "i300-400" src = "/static/senior11.png">
+            <img class = "i300-400" src = "/static/senior12.png">
+            <img class = "i400-300" src = "/static/senior13.png">
+            <img class = "i300-400" src = "/static/senior14.png">
+            <img class = "i400-300" src = "/static/senior15.png">
+            <img class = "i300-400" src = "/static/senior16.png">
+            <img class = "i480-270" src = "/static/senior17.png">
+            <img class = "i300-400" src = "/static/senior18.png">
+            <img class = "i300-400" src = "/static/senior19.png">
+            <img class = "i480-270" src = "/static/senior20.png">
+            <img class = "i300-400" src = "/static/senior21.png">
+            <img class = "i480-270" src = "/static/senior22.png">
+            <img class = "i300-400" src = "/static/senior23.png">
+            <img class = "i300-400" src = "/static/senior24.png">
         </div>
     </body>
 </html>
