--- a/parttime.html
+++ b/parttime.html
@@ -11,7 +11,7 @@
             <img src = "/static/colleague.gif" alt = "colleague">
         </div>
         <br><br><br><br><br><br>
-        <h1><font face = "serif" color = "#29395D">&emsp;&emsp;雞&emsp;玉&emsp;錦&emsp;拉&emsp;麵&emsp;🍜</font></h1>
+        <h1><font face = "serif" color = "#29395D">&emsp;&emsp;雞玉錦拉麵🍜（2020/07-2021/01 2021/05-2021/11）</font></h1>
         <div class = "content">
             <div class = "working">
                 <img src = "/static/restaurant.png" alt = "restaurant">
@@ -27,7 +27,7 @@
             </div>
         </div>
         <br>
-        <h1><font face = "serif" color = "#29395D">&emsp;&emsp;World Gym 🏋️</font></h1>
+        <h1><font face = "serif" color = "#29395D">&emsp;&emsp;World Gym 🏋️（2021/02-2021/04）</font></h1>
         <div class = "content">
             <div class = "working">
                 <img src = "/static/gym.png" alt = "gym">
@@ -42,7 +42,7 @@
                 </div>
             </div>
         </div>
-        <h1><font face = "serif" color = "#29395D">&emsp;&emsp;利豐物流</font></h1>
+        <h1><font face = "serif" color = "#29395D">&emsp;&emsp;利豐物流（2022/07-2022/09）</font></h1>
         <div class = "content">
             <div class = "working">
                 <img src = "/static/lf.png" alt = "lf">
@@ -51,7 +51,7 @@
                 </div>
             </div>
         </div>
-        <h1><font face = "serif" color = "#29395D">&emsp;&emsp;康達館</font></h1>
+        <h1><font face = "serif" color = "#29395D">&emsp;&emsp;康達館（2022/10-2023/06）</font></h1>
         <div class = "content">
             <div class = "working">
                 <img src = "/static/qci.png" alt = "lf">
