--- a/parttime.html
+++ b/parttime.html
@@ -14,15 +14,15 @@
         <h1><font face = "serif" color = "#29395D">&emsp;&emsp;雞玉錦拉麵🍜（2020/07-2021/01 2021/05-2021/11）</font></h1>
         <div class = "content">
             <div class = "working">
-                <img src = "/static/restaurant.png" alt = "restaurant">
+                <img src = "/static/ramen1.png" alt = "restaurant">
                 <div class = "detail">
                     <p><font face = "serif">工作環境<br>- 林口A8店</font></p>
                 </div>
             </div>
             <div class = "workthing2">
-                <img src = "/static/workthing.png" alt = "workthing">
+                <img src = "/static/ramen2.png" alt = "workthing">
                 <div class = "detail">
-                    <p><font face = "serif">晚班工作項目</font></p>
+                    <p><font face = "serif">終於打烊要下班啦🙌</font></p>
                 </div>
             </div>
         </div>
