--- a/parttime.html
+++ b/parttime.html
@@ -55,9 +55,15 @@
         <h2><font face = "serif" color = "#29395D">&emsp;&emsp;康達館（2022/10-2023/06）</font></h2>
         <div class = "content">
             <div class = "working">
-                <img src = "/static/qci.png" alt = "lf">
+                <img src = "/static/qci.png" alt = "qci">
                 <div class = "detail">
                     <p><font face = "serif">工作環境<br>- 廣達員工休閒中心</font></p>
+                </div>
+            </div>
+            <div class = "workthing2">
+                <img src = "/static/qci2.png" alt = "qci2">
+                <div class = "detail">
+                    <p><font face = "serif">工作地點<br>- 廣達電腦</font></p>
                 </div>
             </div>
         </div>
