--- a/parttime.html
+++ b/parttime.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class = "workthing2">
-                <img src = "/static/qci2.png" alt = "qci2">
+                <img src = "/static/qci2.jpg" alt = "qci2">
                 <div class = "detail">
                     <p><font face = "serif">工作地點<br>- 廣達電腦</font></p>
                 </div>
