--- a/parttime.html
+++ b/parttime.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class = "header">
-            <h1><font color = "#29395D" face = "serif"><b> 😍</b></font></h1>
+            <h1><font color = "#29395D" face = "serif"><b>Colleague 😍</b></font></h1>
             <br><br>
             <img src = "/static/colleague.gif" alt = "colleague">
         </div>
