--- a/parttime.html
+++ b/parttime.html
@@ -66,5 +66,16 @@
                 </div>
             </div>
         </div>
+        <div class = "reflection">
+            <div class = "reflection2">
+                <h2><font color = "#29395D" face = "serif"><b>Reflection</b></font></h2>
+                <h3><font color = "#29395D" face = "serif"><b>&emsp;&emsp;&emsp;這是一間連鎖拉麵店 這是我的第一份打工 - 外場服務生 剛進去時 因為還沒滿18歲 都可以開開心心的 20:00 
+                    準時下班 也因為是第一次打工 保有著熱忱 一個月排了20幾天班 因為這是環球購物中心的餐廳 每天早上都需開晨會 做基本禮儀訓練 及一些檔期活動的報告 這裡的樓管很嚴格 很愛開罰單 
+                    這次的打工經驗 讓我變得更加細心謹慎 Uber, Foodpanda發票打錯或漏單 都得接受訂單金額x30倍的罰款 雖然我沒被罰過 但看到同事被處罰 金額真的很可觀 🥲 熟悉了環境與流程 
+                    時常會覺得有些無聊 便會跑進內場學煮麵 熟能生巧後 也開始幫忙出餐 整體來說是不錯的打工經驗 同事感情也挺好的 排班的彈性非常高 同事與店長也都幾乎會配合我的時間 真的非常感謝他們 
+                    對於學生有期中、期末考 這是很棒的福利！🤩<br></b></font></h3>
+            </div>
+        </div>
+        <br>
     </body>
 </html>
