--- a/parttime.html
+++ b/parttime.html
@@ -51,6 +51,16 @@
                 </div>
             </div>
         </div>
+        <div class = "reflection">
+            <div class = "reflection2">
+                <h2><font color = "#29395D" face = "serif"><b>Reflection</b></font></h2>
+                <h3><font color = "#29395D" face = "serif"><b>&emsp;&emsp;&emsp;World Gym 是台灣蠻大間的連鎖健身房 我是業務部工讀生 需要協助正職業務 我們做比較多的是 幫正職尋找客戶、跟店家談合作 
+                    偶爾也會當客服人員 因此我們學習著與陌生人交談、溝通 進而推銷使其加入會員 當然我們也有業績壓力 還記得剛進world gym 副經理看到我的業績 當大家都已經開工 獨自把我留在辦公室 
+                    稱讚我才剛來 業績就比別人好 問我會不會想轉正職 這是最有成就感的時候 雖然在這裡與主管的關係很融洽 與配對到的partner也很合作無間 但業務就是得說一些阿諛奉承的話 
+                    且看到正職們搶客戶的勾心鬥角 漸漸的不喜歡這樣的工作環境 便離開了world gym.<br></b></font></h3>
+            </div>
+        </div>
+        <br>
         <h2><font face = "serif" color = "#29395D">&emsp;&emsp;雞玉錦拉麵🍜（2020/07-2021/01 2021/05-2021/11）</font></h2>
         <div class = "content">
             <div class = "working">
