--- a/parttime.html
+++ b/parttime.html
@@ -27,6 +27,16 @@
                 </div>
             </div>
         </div>
+        <div class = "reflection">
+            <div class = "reflection2">
+                <h2><font color = "#29395D" face = "serif"><b>Reflection</b></font></h2>
+                <h3><font color = "#29395D" face = "serif"><b>&emsp;&emsp;&emsp;我在廣達員工運動休閒中心擔任行政櫃檯，會應徵這份工作是想先看看科技公司的樣子，
+                    在這裡工作其實蠻輕鬆的，上班時間還可以一邊讀書，這是我覺得還不錯的地方。這裡讓我體驗到的是大公司的福利與制度，福利的部分，餐廳與健身房都是私人的，且費用便宜，
+                    而且很好吃，制度的話，在電腦與平板的管控極其嚴格，進出是不能攜帶的，我在上班時想嘗試寫程式作業，但打開他們電腦的terminal，許多指令都無法使用，
+                    且桌面都是智慧財產權的標語，有些網站也不能進入，會被系統組隔，可見他們的管制很嚴格。這也是份輕鬆愉快的打工，上班時與同事有說有笑，相處融洽。<br></b></font></h3>
+            </div>
+        </div>
+        <br>
         <h2><font face = "serif" color = "#29395D">&emsp;&emsp;利豐物流（2022/07-2022/09）</font></h2>
         <div class = "content">
             <div class = "working">
@@ -36,6 +46,17 @@
                 </div>
             </div>
         </div>
+        <div class = "reflection">
+            <div class = "reflection2">
+                <h2><font color = "#29395D" face = "serif"><b>Reflection</b></font></h2>
+                <h3><font color = "#29395D" face = "serif"><b>&emsp;&emsp;&emsp;我應徵了暑期工讀生，在這裡工作比的是速度與正確率，第一天上班主管就問我要不要加班呢，
+                    他說我是工讀中最細心、態度最好的，覺得我加班的產值最高，於是我成了唯一加班的工讀生，只要有加班，我也非常樂意上，我也想在一天內可以賺到最多的錢！
+                    在這裡跟同事與主管們也相處的還不錯，後期有被調去別的部門，那邊的主管也很喜歡我去那裡幫忙呢，我原本的主管也很照顧我，時常在上班時提醒我「詩晴，該喝水囉」、
+                    「該休息囉」，身體不舒服時也會馬上幫我請假，讓我回家休息。在這裡遇到比較特別的經驗是，我有兩個主管，經理與主管，他們是死對頭，於是在離職前，
+                    我經歷到了權力鬥爭過後的結局。<br></b></font></h3>
+            </div>
+        </div>
+        <br>
         <h2><font face = "serif" color = "#29395D">&emsp;&emsp;World Gym 🏋️（2021/02-2021/04）</font></h2>
         <div class = "content">
             <div class = "working">
@@ -54,10 +75,10 @@
         <div class = "reflection">
             <div class = "reflection2">
                 <h2><font color = "#29395D" face = "serif"><b>Reflection</b></font></h2>
-                <h3><font color = "#29395D" face = "serif"><b>&emsp;&emsp;&emsp;World Gym 是台灣蠻大間的連鎖健身房 我是業務部工讀生 需要協助正職業務 我們做比較多的是 幫正職尋找客戶、跟店家談合作 
-                    偶爾也會當客服人員 因此我們學習著與陌生人交談、溝通 進而推銷使其加入會員 當然我們也有業績壓力 還記得剛進world gym 副經理看到我的業績 當大家都已經開工 獨自把我留在辦公室 
-                    稱讚我才剛來 業績就比別人好 問我會不會想轉正職 這是最有成就感的時候 雖然在這裡與主管的關係很融洽 與配對到的partner也很合作無間 但業務就是得說一些阿諛奉承的話 
-                    且看到正職們搶客戶的勾心鬥角 漸漸的不喜歡這樣的工作環境 便離開了world gym.<br></b></font></h3>
+                <h3><font color = "#29395D" face = "serif"><b>&emsp;&emsp;&emsp;World Gym 是台灣蠻大間的連鎖健身房，我是業務部工讀，需要協助正職業務，我們做比較多的是，
+                    幫正職尋找客戶、跟店家談合作，偶爾也會當客服人員，因此我們學習著與陌生人交談、溝通，進而推銷使其加入會員，當然我們也有業績壓力，還記得剛進world gym，
+                    副經理看到我的業績，當大家都已經開工，獨自把我留在辦公室，稱讚我才剛來業績就比別人好，於是問我會不會想轉正職，這是最有成就感的時候，雖然在這裡與主管的關係很融洽，
+                    與配對到的partner也很合作無間，但業務就是得說一些阿諛奉承的話，且看到正職們搶客戶的勾心鬥角，漸漸的不喜歡這樣的工作環境，便離開了world gym.<br></b></font></h3>
             </div>
         </div>
         <br>
@@ -79,11 +100,12 @@
         <div class = "reflection">
             <div class = "reflection2">
                 <h2><font color = "#29395D" face = "serif"><b>Reflection</b></font></h2>
-                <h3><font color = "#29395D" face = "serif"><b>&emsp;&emsp;&emsp;這是一間連鎖拉麵店 這是我的第一份打工 - 外場服務生 剛進去時 因為還沒滿18歲 都可以開開心心的 20:00 
-                    準時下班 也因為是第一次打工 保有著熱忱 一個月排了20幾天班 因為這是環球購物中心的餐廳 每天早上都需開晨會 做基本禮儀訓練 及一些檔期活動的報告 這裡的樓管很嚴格 很愛開罰單 
-                    這次的打工經驗 讓我變得更加細心謹慎 Uber, Foodpanda發票打錯或漏單 都得接受訂單金額x30倍的罰款 雖然我沒被罰過 但看到同事被處罰 金額真的很可觀 🥲 熟悉了環境與流程 
-                    時常會覺得有些無聊 便會跑進內場學煮麵 熟能生巧後 也開始幫忙出餐 整體來說是不錯的打工經驗 同事感情也挺好的 排班的彈性非常高 同事與店長也都幾乎會配合我的時間 真的非常感謝他們 
-                    對於學生有期中、期末考 這是很棒的福利！🤩<br></b></font></h3>
+                <h3><font color = "#29395D" face = "serif"><b>&emsp;&emsp;&emsp;這是一間連鎖拉麵店，這是我的第一份打工 - 外場服務生，剛進去時，因為還沒滿18歲，
+                    都可以開開心心的 20:00 準時下班，也因為是第一次打工，保有著熱忱，一個月排了20幾天班，因為這是環球購物中心的餐廳，每天早上都需開晨會，做基本禮儀訓練及一些檔期活動的報告，
+                    這裡的樓管很嚴格，很愛開罰單，這次的打工經驗讓我變得更加細心謹慎， Uber, Foodpanda發票打錯或漏單，都得接受訂單金額x30倍的罰款，雖然我沒被罰過，
+                    但看到同事被處罰，金額真的很可觀 🥲 ，熟悉了環境與流程，時常會覺得有些無聊，便會跑進內場學煮麵，熟能生巧後，也開始幫忙出餐，整體來說是不錯的打工經驗，
+                    同事感情也挺好的，排班的彈性非常高，同事與店長也都幾乎會配合我的時間，真的非常感謝他們，對於學生有期中、期末考 這是很棒的福利！🤩，後來因為課業的關係，
+                    先提出了一次辭職，後來店長問我可不可以回去幫忙，於是我又上班了一段時間。<br></b></font></h3>
             </div>
         </div>
         <br>
