--- a/parttime.html
+++ b/parttime.html
@@ -32,7 +32,7 @@
                 <h2><font color = "#29395D" face = "serif"><b>Reflection</b></font></h2>
                 <h3><font color = "#29395D" face = "serif"><b>&emsp;&emsp;&emsp;我在廣達員工運動休閒中心擔任行政櫃檯，會應徵這份工作是想先看看科技公司的樣子，
                     在這裡工作其實蠻輕鬆的，上班時間還可以一邊讀書，這是我覺得還不錯的地方。這裡讓我體驗到的是大公司的福利與制度，福利的部分，餐廳與健身房都是私人的，且費用便宜，
-                    而且很好吃，制度的話，在電腦與平板的管控極其嚴格，進出是不能攜帶的，我在上班時想嘗試寫程式作業，但打開他們電腦的terminal，許多指令都無法使用，
+                    而且很好吃。制度的話，在電腦與平板的管控極其嚴格，進出是不能攜帶的，我在上班時想嘗試寫程式作業，但打開他們電腦的terminal，許多指令都無法使用，
                     且桌面都是智慧財產權的標語，有些網站也不能進入，會被系統組隔，可見他們的管制很嚴格。這也是份輕鬆愉快的打工，上班時與同事有說有笑，相處融洽。<br></b></font></h3>
             </div>
         </div>
