--- a/parttime.html
+++ b/parttime.html
@@ -51,7 +51,7 @@
                 <h2><font color = "#29395D" face = "serif"><b>Reflection</b></font></h2>
                 <h3><font color = "#29395D" face = "serif"><b>&emsp;&emsp;&emsp;我應徵了暑期工讀生，在這裡工作比的是速度與正確率，第一天上班主管就問我要不要加班呢，
                     他說我是工讀中最細心、態度最好的，覺得我加班的產值最高，於是我成了唯一加班的工讀生，只要有加班，我也非常樂意上，我也想在一天內可以賺到最多的錢！
-                    在這裡跟同事與主管們也相處的還不錯，後期有被調去別的部門，那邊的主管也很喜歡我去那裡幫忙呢，我原本的主管也很照顧我，時常在上班時提醒我「詩晴，該喝水囉」、
+                    在這裡跟同事與主管們也相處的還不錯，後期有被調去別的部門，那邊的主管也很喜歡我去那裡幫忙呢，原本的主管也很照顧我，時常在上班時提醒我「詩晴，該喝水囉」、
                     「該休息囉」，身體不舒服時也會馬上幫我請假，讓我回家休息。在這裡遇到比較特別的經驗是，我有兩個主管，經理與主管，他們是死對頭，於是在離職前，
                     我經歷到了權力鬥爭過後的結局。<br></b></font></h3>
             </div>
