--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <p><font color = "#29395D" face = "serif"><b>&emsp;&emsp;大家好 我是洪詩晴 目前就讀長庚大學人工智慧學程 歡迎來到我的個人網站 
                         這裡將會呈現我的基本資料與打工經歷、考取的證照、一些作品集還有高中與大學生活 希望大家會希望我的網站設計 謝謝！<br>&emsp;&emsp;Hi, my name is shih-ching Hung. 
                         I study in artificial intelligence department of Chang Gung University. Welcome to my personal website. Here I will present my 
-                        information, part-time work experiences, the certificates I have obtained and senior high school and college life. Hope all of you will
+                        information, part-time job experiences, the certificates I have obtained and senior high school and college life. Hope all of you will
                         like my website design, Thank you!</b></font></p>
                         <br><br>
                 </div>
