--- a/parttime.html
+++ b/parttime.html
@@ -12,7 +12,8 @@
             <img src = "/static/colleague.gif" alt = "colleague">
         </div>
         <br><br><br><br><br><br>
-        <h2><font face = "serif" color = "#29395D">&emsp;&emsp;康達館（2022/10-2023/06）</font></h2>
+        <h2><font face = "serif" color = "#29395D">&emsp;&emsp;康達館</font></h2>
+<!--         <h2><font face = "serif" color = "#29395D">&emsp;&emsp;康達館（2022/10-2023/06）</font></h2> -->
         <div class = "content">
             <div class = "working">
                 <img src = "/static/qci.png" alt = "qci">
@@ -27,17 +28,18 @@
                 </div>
             </div>
         </div>
-        <div class = "reflection">
+<!--         <div class = "reflection">
             <div class = "reflection2">
                 <h2><font color = "#29395D" face = "serif"><b>Reflection</b></font></h2>
                 <h3><font color = "#29395D" face = "serif"><b>&emsp;&emsp;&emsp;我在廣達員工運動休閒中心擔任行政櫃檯，會應徵這份工作是想先看看科技公司的樣子，
-                    在這裡工作其實蠻輕鬆的，上班時間還可以一邊讀書，這是我覺得還不錯的地方。這裡讓我體驗到的是大公司的福利與制度，福利的部分，餐廳與健身房都是私人的，且費用便宜，
+                    在這裡工作其實蠻輕鬆的，上班時間可以一邊讀書，這是我覺得還不錯的地方。這裡讓我體驗到的是大公司的福利與制度，福利的部分，餐廳與健身房都是私人的，且費用便宜，
                     而且很好吃。制度的話，在電腦與平板的管控極其嚴格，進出是不能攜帶的，我在上班時想嘗試寫程式作業，但打開他們電腦的terminal，許多指令都無法使用，
                     且桌面都是智慧財產權的標語，有些網站也不能進入，會被系統組隔，可見他們的管制很嚴格。這也是份輕鬆愉快的打工，上班時與同事有說有笑，相處融洽。<br></b></font></h3>
             </div>
-        </div>
+        </div> -->
         <br>
-        <h2><font face = "serif" color = "#29395D">&emsp;&emsp;利豐物流（2022/07-2022/09）</font></h2>
+        <h2><font face = "serif" color = "#29395D">&emsp;&emsp;利豐物流</font></h2>
+<!--         <h2><font face = "serif" color = "#29395D">&emsp;&emsp;利豐物流（2022/07-2022/09）</font></h2> -->
         <div class = "content">
             <div class = "working">
                 <img src = "/static/lf.png" alt = "lf">
@@ -46,7 +48,7 @@
                 </div>
             </div>
         </div>
-        <div class = "reflection">
+<!--         <div class = "reflection">
             <div class = "reflection2">
                 <h2><font color = "#29395D" face = "serif"><b>Reflection</b></font></h2>
                 <h3><font color = "#29395D" face = "serif"><b>&emsp;&emsp;&emsp;我應徵了暑期工讀生，在這裡工作比的是速度與正確率，第一天上班主管就問我要不要加班呢，
@@ -55,9 +57,10 @@
                     「該休息囉」，身體不舒服時也會馬上幫我請假，讓我回家休息。在這裡遇到比較特別的經驗是，我有兩個主管，經理與主管，他們是死對頭，於是在離職前，
                     我經歷到了權力鬥爭過後的結局。<br></b></font></h3>
             </div>
-        </div>
+        </div> -->
         <br>
-        <h2><font face = "serif" color = "#29395D">&emsp;&emsp;World Gym 🏋️（2021/02-2021/04）</font></h2>
+        <h2><font face = "serif" color = "#29395D">&emsp;&emsp;World Gym 🏋️</font></h2>
+<!--         <h2><font face = "serif" color = "#29395D">&emsp;&emsp;World Gym 🏋️（2021/02-2021/04）</font></h2> -->
         <div class = "content">
             <div class = "working">
                 <img src = "/static/gym.png" alt = "gym">
@@ -72,7 +75,7 @@
                 </div>
             </div>
         </div>
-        <div class = "reflection">
+<!--         <div class = "reflection">
             <div class = "reflection2">
                 <h2><font color = "#29395D" face = "serif"><b>Reflection</b></font></h2>
                 <h3><font color = "#29395D" face = "serif"><b>&emsp;&emsp;&emsp;World Gym 是台灣蠻大間的連鎖健身房，我是業務部工讀，需要協助正職業務，我們做比較多的是，
@@ -80,9 +83,10 @@
                     副經理看到我的業績，當大家都已經開工，獨自把我留在辦公室，稱讚我才剛來業績就比別人好，於是問我會不會想轉正職，這是最有成就感的時候，雖然在這裡與主管的關係很融洽，
                     與配對到的partner也很合作無間，但業務就是得說一些阿諛奉承的話，且看到正職們搶客戶的勾心鬥角，漸漸的不喜歡這樣的工作環境，便離開了world gym.<br></b></font></h3>
             </div>
-        </div>
+        </div> -->
         <br>
-        <h2><font face = "serif" color = "#29395D">&emsp;&emsp;雞玉錦拉麵🍜（2020/07-2021/01 2021/05-2021/11）</font></h2>
+        <h2><font face = "serif" color = "#29395D">&emsp;&emsp;雞玉錦拉麵🍜</font></h2>
+<!--         <h2><font face = "serif" color = "#29395D">&emsp;&emsp;雞玉錦拉麵🍜（2020/07-2021/01 2021/05-2021/11）</font></h2> -->
         <div class = "content">
             <div class = "working">
                 <img src = "/static/ramen1.png" alt = "restaurant">
@@ -97,7 +101,7 @@
                 </div>
             </div>
         </div>
-        <div class = "reflection">
+<!--         <div class = "reflection">
             <div class = "reflection2">
                 <h2><font color = "#29395D" face = "serif"><b>Reflection</b></font></h2>
                 <h3><font color = "#29395D" face = "serif"><b>&emsp;&emsp;&emsp;這是一間連鎖拉麵店，這是我的第一份打工 - 外場服務生，剛進去時，因為還沒滿18歲，
@@ -107,7 +111,7 @@
                     同事感情也挺好的，排班的彈性非常高，同事與店長也都幾乎會配合我的時間，真的非常感謝他們，對於學生有期中、期末考 這是很棒的福利！🤩 後來因為課業的關係，
                     先提出了一次辭職，後來店長問我可不可以回去幫忙，於是我又上班了一段時間。<br></b></font></h3>
             </div>
-        </div>
+        </div> -->
         <br>
     </body>
 </html>
