--- a/piano.html
+++ b/piano.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
         </div>
-        <div class = "reflection">
+<!--         <div class = "reflection">
             <div class = "reflection2">
                 <h2><font color = "#29395D" face = "serif"><b>Reflection</b></font></h2>
                 <h3><font color = "#29395D" face = "serif"><b>&emsp;&emsp;&emsp;因為疫情 鋼琴檢定的考試規則與時間大變 因考官都為英國考官 來台流程複雜 且隔離時間長 
@@ -34,7 +34,7 @@
                     還要趕緊把一首演奏曲練好 原本想說錄影比實體考試好 因為失誤可以重錄 但後來發現並沒有 錄製影片時需將四首曲子 一氣呵成的演奏完 不可剪輯影片 通常一天裡只有前1-3次的最好
                     每次影片大概20分鐘 後面幾次會因手疲勞而失誤率大增 而且錄影因為可以一直重來 每次錄完都會覺得不夠好 下一次會更好 而再錄一次！！！無限循環 結果變得比實體考還累 🫠<br></b></font></h3>
             </div>
-        </div>
+        </div> -->
         <div class = "content2">
             <div class = "grade5-1">
                 <img src = "/static/writingtest.png" alt = "writingtest">
@@ -58,13 +58,13 @@
                 <video src = "/static/kalimba.mov" alt = "kalimba" controls></video>
             </div>
         </div>
-        <div class = "reflection">
+<!--         <div class = "reflection">
             <div class = "reflection2">
                 <h2><font color = "#29395D" face = "serif"><b>Reflection</b></font></h2>
                 <h3><font color = "#29395D" face = "serif"><b>&emsp;&emsp;&emsp;左邊是初學大提琴 跟朋友一起合奏 非常大走音 那時候學校社團很棒 每次上社課都可以跟大提琴老師一對一教學 
                     讓我在短時間內 至少學會音的位置 且可以拉出簡單的兒歌 右邊是拇指琴 當時看到覺得好玩就買了 但他的音很少 還要自己微調 有點小麻煩哈哈 所以我只能彈一些音較少的曲子<br></b></font></h3>
             </div>
-        </div>
+        </div> -->
         <div class = "content4">
             <div class = "espanol">
                 <img src = "/static/espanol.png" alt = "espanol" >
@@ -73,7 +73,7 @@
                 </div>
             </div>
         </div>
-        <div class = "reflection">
+<!--         <div class = "reflection">
             <div class = "reflection2">
                 <h2><font color = "#29395D" face = "serif"><b>Reflection</b></font></h2>
                 <h3><font color = "#29395D" face = "serif"><b>&emsp;&emsp;&emsp;在我的高中 規定每人都要在日/德/西/法四種語言中 選擇一個為三年學習的第二外語 
@@ -84,6 +84,6 @@
                     Me gusta la música, y he aprendido el piano nueve años, voy a tomar un examen el año que viene,este es mi examen final. Me gusta viajar, he 
                     estado en China, Corea, y Japón..., y quiero conocer más países en el futuro.<br></b></font></h3>
             </div>
-        </div>
+        </div> -->
     </body>
 </html>
