--- a/program.html
+++ b/program.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My profile - Work experiment - Ramen</title>
+        <title>My profile - Project</title>
         <link rel = "stylesheet" href = "/static/program.css">
         <meta charset = "UTF-8">
     </head>
     <body>
         <div class = "content">
-            <h2><font color = "#29395D" face = "serif" >資料庫系統設計</font></h2>
+            <h2><font color = "#29395D" face = "serif" >智慧廁所：AI偵測結合自動通報系統</font></h2>
             <ul class = "slides">
                 <input type = "radio" id = "control-1" name = "control" checked>
                 <input type = "radio" id = "control-2" name = "control">
