--- a/program.html
+++ b/program.html
@@ -24,5 +24,16 @@
             </div>
             <br>
         </div>
+        <div class = "content">
+            <img class = "i400-300" src = "/static/game1-1.jpg">
+            <img class = "i400-300" src = "/static/game1-2.jpg">
+            <img class = "i400-300" src = "/static/game1-3.jpg">
+            <img class = "i400-300" src = "/static/game1-4.jpg">
+            <img class = "i400-300" src = "/static/game1-5.jpg">
+            <img class = "i400-300" src = "/static/game1-6.jpg">
+            <img class = "i400-300" src = "/static/game1-7.jpg">
+            <img class = "i400-300" src = "/static/game1-8.jpg">
+            <img class = "i400-300" src = "/static/game1-9.jpg">
+        </div>
     </body>
 </html>
