--- a/program.html
+++ b/program.html
@@ -6,7 +6,7 @@
         <meta charset = "UTF-8">
     </head>
     <body>
-        <div class = "content">
+        <div class = "content_main">
             <h2><font color = "#29395D" face = "serif" >智慧廁所：AI偵測結合自動通報系統</font></h2>
             <img src = "/static/toilet.jpg" alt = "toilet">
         </div>
