--- a/program.html
+++ b/program.html
@@ -34,6 +34,12 @@
             <img class = "i400-300" src = "/static/game1-7.jpg">
             <img class = "i400-300" src = "/static/game1-8.jpg">
             <img class = "i400-300" src = "/static/game1-9.jpg">
+            <img class = "i400-300" src = "/static/game2-1.jpg">
+            <img class = "i400-300" src = "/static/game2-2.jpg">
+            <img class = "i400-300" src = "/static/game2-3.jpg">
+            <img class = "i400-300" src = "/static/game2-4.jpg">
+            <img class = "i400-300" src = "/static/game2-5.jpg">
+            <img class = "i400-300" src = "/static/game2-6.jpg">
         </div>
     </body>
 </html>
