--- a/program.html
+++ b/program.html
@@ -6,8 +6,9 @@
         <meta charset = "UTF-8">
     </head>
     <body>
-        <div class = "content_main">
-            <h2><font color = "#29395D" face = "serif" >智慧廁所：AI偵測結合自動通報系統</font></h2>
+        <div class = "header">
+            <br>
+            <h2><font color = "#29395D" face = "serif"><b>智慧廁所：AI偵測結合自動通報系統</b></font></h2>
             <img src = "/static/toilet.jpg" alt = "toilet">
         </div>
         <div class = "introduction">
@@ -24,6 +25,7 @@
             </div>
             <br>
         </div>
+        <br><br><br>
         <div class = "content">
             <img class = "i400-300" src = "/static/game1-1.jpg">
             <img class = "i400-300" src = "/static/game1-2.jpg">
