--- a/program.html
+++ b/program.html
@@ -14,10 +14,11 @@
         <div class = "introduction">
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             <div class = "introduction-1">
-                <h1><font color = "#29395D" face = "serif"><b>2023 第28屆大專院校資訊應用服務創新競賽 友達AIoT智慧場域與ESG應用 卓越組 第一名</b></font></h1>
-                <h1><font color = "#29395D" face = "serif"><b>2023 第28屆大專院校資訊應用服務創新競賽 資訊應用組 佳作</b></font></h1>
-                 <h1><font color = "#29395D" face = "serif"><b>2023 第7屆創創AIoT競賽 永續科技組 第一名</b></font></h1>
-                 <h1><font color = "#29395D" face = "serif"><b>2023 第7屆創創AIoT競賽 貿澤電子 企業獎</b></font></h1>
+                <h1><font color = "#29395D" face = "serif"><b>獲獎紀錄</b></font></h1>
+                <h2><font color = "#29395D" face = "serif"><b>2023 第28屆大專院校資訊應用服務創新競賽 友達AIoT智慧場域與ESG應用 卓越組 第一名</b></font></h2>
+                <h2><font color = "#29395D" face = "serif"><b>2023 第28屆大專院校資訊應用服務創新競賽 資訊應用組 佳作</b></font></h2>
+                 <h2><font color = "#29395D" face = "serif"><b>2023 第7屆創創AIoT競賽 永續科技組 第一名</b></font></h2>
+                 <h1><font color = "#29395D" face = "serif"><b>2023 第7屆創創AIoT競賽 貿澤電子 企業獎</b></font></h2>
                 <h2><font color = "#29395D" face = "serif"><b>Introduction</b></font></h2>
                 <h3><font color = "#29395D" face = "serif"><b>&emsp;&emsp;&emsp;智慧廁所旨在提供全面的廁所管理功能，包括菸味、異味、衛生紙剩餘量、廁間佔用時間、燈光異常和積水的偵測與即時通報。透過智能技術模組，確保廁所環境始終保持舒適、乾淨和安全。
 另外，我們設計了方便的QRcode通報表單功能，讓使用者能輕鬆參與廁所環境的維護。使用者只需掃描QR code填寫表單，描述問題或需求，這些訊息將自動上傳至雲端，為管理人員提供即時反饋，並建立更開放、透明的溝通渠道，確保廁所品質不斷提升。
