--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="slides">
                 <img class="slide2" src = "/static/program.png">
                 <div class = "detail">
-                    <h2><font color = "#29395D" face = "serif"><a href = "program.html">see more</a></font></h2>
+                    <h2><font color = "#29395D" face = "serif"><a href = "#">see more</a></font></h2>
                 </div>
             </div>
             <div class="slides">
