--- a/index.html
+++ b/index.html
@@ -156,7 +156,12 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Experience</h3>
             <div class="resume-item">
-              <h4>程式設計課程教學助理</h4>
+              <h4>資料結構與演算法課程 教學助理</h4>
+              <h5>Sep 2024 - Dec 2024</h5>
+              <p><em>長庚大學</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>程式設計課程 教學助理</h4>
               <h5>Sep 2023 - Dec 2023</h5>
               <p><em>長庚大學</em></p>
             </div>
@@ -168,11 +173,11 @@
                 <li>基於 NLP 技術的金融情緒分析與股票趨勢預測</li>
               </ul>
             </div>
-            <div class="resume-item">
+<!--             <div class="resume-item">
               <h4>廣達電腦員工休閒活動中心櫃台行政人員</h4>
               <h5>Oct 2022 - Jun 2023</h5>
               <p><em>奈克廣告創意行銷有限公司</em></p>
-            </div>
+            </div> -->
             <div class="resume-item">
               <h4>畢業專題展文書 <a href="https://linktr.ee/cgucsie" target="_blank"><i class="bx bx-link"></i></a></h4>
               <h5>Sep 2023 - Dec 2023</h5>
