--- a/portfolio-details-2.html
+++ b/portfolio-details-2.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.webp" rel="icon">
+  <link href="assets/img/apple-touch-icon.webp" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -51,11 +51,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-2.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-2.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2_2.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-2_2.webp" alt="">
                 </div>
 
               </div>
@@ -68,9 +68,9 @@
               <h4>ABRSM</h4>
               <ul>
                 <li><strong>Student</strong>: Shih-Ching, Hung</li>
-                <li><strong>Piano Performance</strong>: Grade 8 (2021) <a href="assets/img/portfolio/grade8.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ABRSM<br>- Grade 8 Piano Performance"><i class="bx bx-plus"></i></a></li>
+                <li><strong>Piano Performance</strong>: Grade 8 (2021) <a href="assets/img/portfolio/grade8.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ABRSM<br>- Grade 8 Piano Performance"><i class="bx bx-plus"></i></a></li>
                 <!-- <li><strong>Piano Performance</strong>: Grade 8 (2021)</li> -->
-                <li><strong>Music Theory</strong>: Grade 5 (2018) <a href="assets/img/portfolio/grade5.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ABRSM<br>- Grade 5 Music Theory"><i class="bx bx-plus"></i></a></li>
+                <li><strong>Music Theory</strong>: Grade 5 (2018) <a href="assets/img/portfolio/grade5.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ABRSM<br>- Grade 5 Music Theory"><i class="bx bx-plus"></i></a></li>
                 <li><strong>Teacher</strong>: Hsing-Ju, Tsai</li>
               </ul>
             </div>
