--- a/portfolio-details-3.html
+++ b/portfolio-details-3.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.webp" rel="icon">
+  <link href="assets/img/apple-touch-icon.webp" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -51,35 +51,35 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3_2.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-3_2.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3_3.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-3_3.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3_4.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-3_4.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3_5.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-3_5.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3_6.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-3_6.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3_7.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-3_7.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3_8.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-3_8.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3_9.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-3_9.webp" alt="">
                 </div>
 
               </div>
@@ -94,10 +94,10 @@
                 <li><strong>Professor</strong>: 張哲維</li>
                 <li><strong>Student</strong>: 洪詩晴、盧于璇、吳冠諭、趙君熙</li>
                 <li><strong>Introduction Video</strong>: <a href="https://youtu.be/HLnQyVk6eM4?si=DZ3m5Ya6BhPRcrC7" target="_blank">Demo</a></li>
-                <li><strong>Award</strong>: <br>永續科技組 第一名 <a href="assets/img/portfolio/aiot_1st_en.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第7屆創創AIoT競賽 永續科技組 第一名"><i class="bx bx-plus"></i></a>
-                  <a href="assets/img/portfolio/aiot_1st.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第7屆創創AIoT競賽 永續科技組 第一名"></a>
-                  <br>貿澤電子 企業獎 <a href="assets/img/portfolio/aiot_enterprise_en.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第7屆創創AIoT競賽 永續科技組 貿澤電子 企業獎"><i class="bx bx-plus"></i></a>
-                  <a href="assets/img/portfolio/aiot_enterprise.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第7屆創創AIoT競賽 永續科技組 貿澤電子 企業獎"></a></li>
+                <li><strong>Award</strong>: <br>永續科技組 第一名 <a href="assets/img/portfolio/aiot_1st_en.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第7屆創創AIoT競賽 永續科技組 第一名"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/aiot_1st.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第7屆創創AIoT競賽 永續科技組 第一名"></a>
+                  <br>貿澤電子 企業獎 <a href="assets/img/portfolio/aiot_enterprise_en.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第7屆創創AIoT競賽 永續科技組 貿澤電子 企業獎"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/aiot_enterprise.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第7屆創創AIoT競賽 永續科技組 貿澤電子 企業獎"></a></li>
                 <li><strong>Date</strong>: 13 Jul, 2023</li>
               </ul>
             </div>
