--- a/portfolio-details-4.html
+++ b/portfolio-details-4.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.webp" rel="icon">
+  <link href="assets/img/apple-touch-icon.webp" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -51,31 +51,31 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-4_2.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-4_2.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-4_3.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-4_3.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-4_4.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-4_4.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-4_5.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-4_5.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-4_6.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-4_6.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-4_7.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-4_7.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-4_8.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-4_8.webp" alt="">
                 </div>
 
               </div>
