--- a/portfolio-details-8.html
+++ b/portfolio-details-8.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.webp" rel="icon">
+  <link href="assets/img/apple-touch-icon.webp" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -51,51 +51,51 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-8.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-8.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_2.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-8_2.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_3.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-8_3.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_4.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-8_4.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_5.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-8_5.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_6.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-8_6.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_7.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-8_7.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_8.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-8_8.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_9.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-8_9.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_10.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-8_10.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_11.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-8_11.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_12.jpg" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-8_12.webp" alt="">
                 </div>
 
               </div>
