--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.webp" class="img-fluid" alt="">
+            <img src="assets/img/profile-img.webp" class="img-fluid" alt="" loading="lazy">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Welcome to my website</h3>
@@ -150,7 +150,7 @@
               <h4>大園國際高中 普通科</h4>
               <h5>Sep 2017 - Jun 2020</h5>
               <p><em>數理專長班</em></p>
-              <p><em>西班牙語 </em><a href="assets/img/portfolio/espanol.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第二外語能力測驗 SFLPT<br>西班牙語 | A1 合格"><i class="bx bx-plus"></i></a></p>
+              <p><em>西班牙語 </em><a href="assets/img/portfolio/espanol.webp" loading="lazy" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第二外語能力測驗 SFLPT<br>西班牙語 | A1 合格"><i class="bx bx-plus"></i></a></p>
             </div>
           </div>
           <div class="col-lg-6">
@@ -217,7 +217,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-project">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.webp" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-1.webp" class="img-fluid" alt="" loading="lazy">
               <div class="portfolio-info">
                 <h4>Intelligent Toilet</h4>
                 <p>第28屆大專院校資訊應用服務創新競賽</p>
@@ -231,7 +231,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-life">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.webp" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-2.webp" class="img-fluid" alt="" loading="lazy">
               <div class="portfolio-info">
                 <h4>Piano Certificate</h4>
                 <p>ABRSM Grade 8 Piano Performance</p>
@@ -245,7 +245,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-project">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.webp" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-3.webp" class="img-fluid" alt="" loading="lazy">
               <div class="portfolio-info">
                 <h4>Intelligent Toilet</h4>
                 <p>第7屆創創AIoT競賽</p>
@@ -260,7 +260,7 @@
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-life">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.webp" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-4.webp" class="img-fluid" alt="" loading="lazy">
               <div class="portfolio-info">
                 <h4>HK 🇭🇰</h4>
                 <p>2023</p>
@@ -274,13 +274,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-work">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.webp" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-5.webp" class="img-fluid" alt="" loading="lazy">
               <div class="portfolio-info">
                 <h4>櫃檯人員</h4>
                 <p>廣達電腦員工休閒活動中心 - 康達館</p>
                 <br>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-5.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" 
+                  <a href="assets/img/portfolio/portfolio-5.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" loading="lazy"
                   title="我在廣達員工運動休閒中心擔任行政櫃檯，當時想去看看科技公司的樣子，體驗了大公司的制度、福利與工作環境。"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
@@ -289,7 +289,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-life">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.webp" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-6.webp" class="img-fluid" alt="" loading="lazy">
               <div class="portfolio-info">
                 <h4>高中畢業典禮 🎓</h4>
                 <p>2020.06.15</p>
@@ -303,7 +303,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-project">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.webp" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-7.webp" class="img-fluid" alt="" loading="lazy">
               <div class="portfolio-info">
                 <h4>Intelligent Toilet</h4>
                 <p>112學年度資訊工程學系暨人工智慧學士學位學程聯合畢業專題展</p>
@@ -317,7 +317,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-life">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.webp" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-8.webp" class="img-fluid" alt="" loading="lazy">
               <div class="portfolio-info">
                 <h4>大學畢業典禮 🎓</h4>
                 <p>2024.06.01</p>
@@ -330,7 +330,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-life">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.webp" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-9.webp" class="img-fluid" alt="" loading="lazy">
               <div class="portfolio-info">
                 <h4>Hiking ⛰️</h4>
                 <p></p>
@@ -359,7 +359,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-life">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-11.webp" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-11.webp" class="img-fluid" alt="" loading="lazy">
               <div class="portfolio-info">
                 <h4>綠島 🏝️</h4>
                 <p></p>
@@ -373,7 +373,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-life">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-12.webp" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-12.webp" class="img-fluid" alt="" loading="lazy">
               <div class="portfolio-info">
                 <h4>漁光島 🏝️</h4>
                 <p></p>
@@ -577,4 +577,5 @@
 </body>
 
 </html>
+
 
