--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>姓名｜Name</strong> <span>洪詩晴 Poesy Hung</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>年齡｜Age</strong> <span>22</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>年齡｜Age</strong> <span>23</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>電子郵件｜Email</strong> <span><a href = "mailto:poesy815@gmail.com" style="color:#272829;">poesy815@gmail.com</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>聯絡地址｜Address</strong> <span>桃園市龜山區文化一路 259 號</span></li>
                 </ul>
@@ -123,7 +123,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>洪詩晴 Poesy Hung</h4>
-              <p><em>長庚大學 資訊工程學系 碩一</em></p>
+              <p><em>長庚大學 資訊工程學系 碩二</em></p>
               <ul>
                 <li>poesy815@gmail.com</li>
                 <!-- <li>(123) 456-7891</li> -->
@@ -577,5 +577,6 @@
 </body>
 
 </html>
+
 
 
