--- a/portfolio-details-1.html
+++ b/portfolio-details-1.html
@@ -51,23 +51,23 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-1.webp" alt="">
+                  <img src="assets/img/portfolio/portfolio-1.webp" alt="" loading="lazy">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1_2.webp" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-1_2.webp" alt="" loading="lazy">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1_3.webp" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-1_3.webp" alt="" loading="lazy">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1_4.webp" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-1_4.webp" alt="" loading="lazy">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1_5.webp" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-1_5.webp" alt="" loading="lazy">
                 </div>
 
               </div>
@@ -82,8 +82,8 @@
                 <li><strong>Professor</strong>: 張哲維</li>
                 <li><strong>Student</strong>: 洪詩晴、盧于璇、吳冠諭、趙君熙</li>
                 <li><strong>Introduction Video</strong>: <a href="https://youtu.be/HLnQyVk6eM4?si=DZ3m5Ya6BhPRcrC7" target="_blank">Demo</a></li>
-                <li><strong>Award</strong>: <br>友達AIoT智慧場域與ESG應用 卓越組 第一名 <a href="assets/img/portfolio/innoserve_auo.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第28屆大專院校資訊應用服務創新競賽 友達AIoT智慧場域與ESG應用 卓越組 第一名"><i class="bx bx-plus"></i></a>
-                  <br>資訊應用組 佳作 <a href="assets/img/portfolio/innoserve_ip.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第28屆大專院校資訊應用服務創新競賽 資訊應用組 佳作"><i class="bx bx-plus"></i></a></li>
+                <li><strong>Award</strong>: <br>友達AIoT智慧場域與ESG應用 卓越組 第一名 <a href="assets/img/portfolio/innoserve_auo.webp" loading="lazy" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第28屆大專院校資訊應用服務創新競賽 友達AIoT智慧場域與ESG應用 卓越組 第一名"><i class="bx bx-plus"></i></a>
+                  <br>資訊應用組 佳作 <a href="assets/img/portfolio/innoserve_ip.webp" loading="lazy" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第28屆大專院校資訊應用服務創新競賽 資訊應用組 佳作"><i class="bx bx-plus"></i></a></li>
                 <li><strong>Date</strong>: 04 Nov, 2023</li>
               </ul>
             </div>
@@ -123,3 +123,4 @@
 </body>
 
 </html>
+
